--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
-
 .bodyStyle {
-margin: 0 auto;
-padding: 0;
-font-size: 0;
-max-width: 960px;
-background-image: url(http://www.topoboi.com/pic/201312/1920x1080/topoboi.com-32882.jpg);
-background-repeat: no-repeat;
-background-size: cover;
+    margin: 0 auto;
+    padding: 0;
+    font-size: 0;
+    max-width: 1440px;
+    min-height: 1050px;
+    background-image: url(img/backgrounCv.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .headerStyle {
     margin: 0 auto;
-    max-width: 960px;
 }
-    .header {
-        width: 100%;
+.header {
+    width: 100%;
         height: max-content;
         display: inline-flex;
         color: rgb(255, 255, 255);
@@ -46,11 +45,14 @@ background-size: cover;
     .navAndName nav {
         align-self: flex-end;
     }
-.mainStyle {
-    margin: 0 auto;
-    max-width: 960px;
-    display: flex;
-}
+    hr {
+        width: 100%;
+    }
+    .mainStyle {
+        margin: 0 auto;
+        display: flex;
+        height: 100%;
+    }
     .leftBlock {
         display: flex;
         flex-direction: column;
@@ -91,16 +93,15 @@ background-size: cover;
     .rightBlock {
         display: flex;
         flex-direction: column;
-        font-size: 20px;
-        border: 5px solid rgba(22, 21, 21, 0.932);
+        font-size: 1.7rem;
+        font-weight: 550;
         border-radius: 30px;
         padding: 10px;
-        background-color: rgb(233, 233, 211);
+        background-image: url(img/backgrounMainCv.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
         font-family: Arial, Helvetica, sans-serif;
     }
-        hr {
-            width: 100%;
-        }
         .aboutMe h2{
             margin-block: 0;
         }
@@ -131,6 +132,10 @@ background-size: cover;
         .education ul {
             margin-block: 0;
             font-size: 20px;
+            font-size: 1.7rem;
+        }
+        .education ul a{
+            color: black;
         }
 .footerStyle {
     width: 100%;
