--- a/style.css
+++ b/style.css
@@ -29,8 +29,12 @@
     }
     .header img {
         border-radius: 50%;
-        margin: 10px
+        margin: 10px;
+        transition: 1s;
     }
+        .header img:hover {
+            transform: scale(1.2);
+        }
     .navAndName {
         display: flex;
         flex-direction: column;
@@ -121,6 +125,10 @@
         }
         .expiriens h2 {
             margin-block: 0;
+        }
+        .expiriens ul {
+            margin-block-start: 0.1em;
+            margin-block-end: 0.1em;
         }
         .expiriens p {
             margin-block: 0;
